# AnyRemote-IOTAR

./: .gitignore  new_script.py  pyproject.toml  test.py
backend/central-backend/: app.py  pyproject.toml
backend/central-backend/data_handler/: __init__.py  handler.py  registered_devices.json  utils.py
backend/central-backend/flaskapp/: __init__.py  views.py
backend/central-backend/object_detection/: test_script.py  yolo_test_script.py
backend/edge_backend/: 5min.3gp  app.py  screen2.py
backend/edge_backend/flaskapp/: views.py
backend/light_backend/: app.py  screen.py  test_server.py
backend/light_backend/flaskapp/: views.py
iot_ar/: app.json  babel.config.js  index.js  package-lock.json  package.json
iot_ar/android/: settings.gradle
iot_ar/android/app/: build.gradle
iot_ar/android/app/src/debug/java/com/iot_ar/: ReactNativeFlipper.java
iot_ar/android/app/src/main/: AndroidManifest.xml
iot_ar/android/app/src/main/java/com/iot_ar/: MainActivity.java  MainApplication.java
iot_ar/android/app/src/main/res/values/: strings.xml
iot_ar/ios/: Podfile
iot_ar/ios/iot_ar/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
iot_ar/ios/iot_ar.xcodeproj/: project.pbxproj
iot_ar/ios/iot_ar.xcodeproj/xcshareddata/xcschemes/: iot_ar.xcscheme
iot_ar/ios/iot_ar.xcworkspace/: contents.xcworkspacedata
iot_ar/ios/iot_arTests/: iot_arTests.m
iot_ar/patches/: react-native-camera+4.2.1.patch
iot_ar/src/: App.jsx  Config.js
iot_ar/src/components/: CustomProvider.js  Label.js  OverlaySpinner.js  Theme.js  Toast.js
(+1 files in other folders)
