[tool.poetry]
name = "anyremote-iotar"
version = "0.1.0"
description = ""
authors = ["Rohan Russel Nedungadi <nrogun@gmail.com>"]
readme = "README.md"
packages = [{include = "anyremote_iotar"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-cors = "^3.0.10"
pillow = "^9.4.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
